--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
 	</div>
 	<table border="1">
 		<tr>
-			<td>
+			<td width="200px">
 				<img width="200px" src="https://images.unsplash.com/photo-1700578074437-7b25ed5dacb6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
 			</td>
-			<td>
+			<td width="600">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi non quis exercitationem culpa nesciunt nihil aut nostrum explicabo reprehenderit optio amet ab temporibus asperiores quasi cupiditate. Voluptatum ducimus voluptates voluptas?
 			</td>
-			<td>
+			<td width="200px">
 				<img width="200px" src="https://images.unsplash.com/photo-1700578074437-7b25ed5dacb6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
 				
 			</td>
